--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -329,7 +329,7 @@ disqus:
 #hypercomments_id:
 
 # Gentie productKey
-#gentie_productKey:
+gentie_productKey: 3dcc9ae03de84713918b8d0fba7575de
 
 # changyan
 changyan:
